src/io/micro/antlr/MicroParser.java
// Generated from /home/nikhil/Documents/Java/Micro/src/Micro.g4 by ANTLR 4.7
package io.micro.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MicroParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, FLOAT_ID=20, DOUBLE_ID=21, INT_ID=22, VOID_ID=23, 
		UNION_DEF=24, BOOL_ID=25, SHORT_ID=26, LONG_ID=27, INTEGER=28, HEXADECIMAL=29, 
		FLOAT=30, DOUBLE=31, STRING=32, TRUE=33, FALSE=34, IMPORT=35, EOS=36, 
		MODULE_SP=37, CMTCH=38, MCOMO=39, MCOMC=40, DEF=41, LPRM=42, RPRM=43, 
		LBRC=44, RBRC=45, LSQB=46, RSQB=47, AND=48, OR=49, LT=50, GT=51, LTE=52, 
		GTE=53, IF=54, WHILE=55, EQ=56, NOT=57, CONST=58, ELIF=59, ELSE=60, PARAM_SEP=61, 
		LOAD=62, INCLUDE=63, URL=64, CALL_t=65, UNION_t=66, INIT=67, SIMP_CHARS=68, 
		COMPLEX_CHARS=69, LINE_COMMENT=70, MULTI_COMMENT=71, WS=72;
	public static final int
		RULE_type_id = 0, RULE_id = 1, RULE_mid = 2, RULE_bx_type = 3, RULE_type = 4, 
		RULE_add = 5, RULE_sub = 6, RULE_mul = 7, RULE_div = 8, RULE_value = 9, 
		RULE_negative_value = 10, RULE_expr = 11, RULE_load_inst = 12, RULE_include_inst = 13, 
		RULE_compiler_inst = 14, RULE_import_stmt = 15, RULE_module_dec = 16, 
		RULE_field = 17, RULE_array_def = 18, RULE_formalParam = 19, RULE_func_call_out = 20, 
		RULE_func_call_local = 21, RULE_func_call_local_stmt = 22, RULE_func_call_out_stmt = 23, 
		RULE_varset = 24, RULE_local_vardef = 25, RULE_array_ref = 26, RULE_array_set_stmt = 27, 
		RULE_type_casting = 28, RULE_arrayname = 29, RULE_return_stmt = 30, RULE_greaterthan = 31, 
		RULE_lesserthan = 32, RULE_greaterthanE = 33, RULE_lesserthanE = 34, RULE_notequalto = 35, 
		RULE_equalto = 36, RULE_false_con = 37, RULE_true_con = 38, RULE_boolval = 39, 
		RULE_notboolval = 40, RULE_logicexpr = 41, RULE_enclosed_boolval = 42, 
		RULE_andboolexpr = 43, RULE_orboolexpr = 44, RULE_boolexpr = 45, RULE_boolparseexpr = 46, 
		RULE_if_stmt = 47, RULE_elif_stmt = 48, RULE_else_stmt = 49, RULE_while_stmt = 50, 
		RULE_init_stmt = 51, RULE_uval_stmt = 52, RULE_uval_get = 53, RULE_add_inc_stmt = 54, 
		RULE_sub_inc_stmt = 55, RULE_mul_inc_stmt = 56, RULE_div_inc_stmt = 57, 
		RULE_stmt = 58, RULE_ptype = 59, RULE_param = 60, RULE_paramList = 61, 
		RULE_function = 62, RULE_elem = 63, RULE_specList = 64, RULE_union_def_key = 65, 
		RULE_union_def = 66, RULE_program = 67;
	public static final String[] ruleNames = {
		"type_id", "id", "mid", "bx_type", "type", "add", "sub", "mul", "div", 
		"value", "negative_value", "expr", "load_inst", "include_inst", "compiler_inst", 
		"import_stmt", "module_dec", "field", "array_def", "formalParam", "func_call_out", 
		"func_call_local", "func_call_local_stmt", "func_call_out_stmt", "varset", 
		"local_vardef", "array_ref", "array_set_stmt", "type_casting", "arrayname", 
		"return_stmt", "greaterthan", "lesserthan", "greaterthanE", "lesserthanE", 
		"notequalto", "equalto", "false_con", "true_con", "boolval", "notboolval", 
		"logicexpr", "enclosed_boolval", "andboolexpr", "orboolexpr", "boolexpr", 
		"boolparseexpr", "if_stmt", "elif_stmt", "else_stmt", "while_stmt", "init_stmt", 
		"uval_stmt", "uval_get", "add_inc_stmt", "sub_inc_stmt", "mul_inc_stmt", 
		"div_inc_stmt", "stmt", "ptype", "param", "paramList", "function", "elem", 
		"specList", "union_def_key", "union_def", "program"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'+'", "'-'", "'*'", "'/'", "'var'", "'='", "'return'", "'!='", 
		"'FALSE'", "'False'", "'false'", "'TRUE'", "'True'", "'true'", "':'", 
		"'+='", "'-='", "'*='", "'/='", "'float'", "'double'", "'int'", "'void'", 
		"'union_def'", "'bool'", "'short'", "'long'", null, null, null, null, 
		null, null, null, "'import'", "';'", "'module'", "'##'", "'#^'", "'^#'", 
		null, "'('", "')'", "'{'", "'}'", "'['", "']'", null, null, "'<'", "'>'", 
		"'<='", "'>='", "'if'", "'while'", "'=='", null, "'const'", "'elif'", 
		"'else'", "','", "'require'", "'include'", "'url'", "'->'", "'<<'", "'init'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "FLOAT_ID", "DOUBLE_ID", 
		"INT_ID", "VOID_ID", "UNION_DEF", "BOOL_ID", "SHORT_ID", "LONG_ID", "INTEGER", 
		"HEXADECIMAL", "FLOAT", "DOUBLE", "STRING", "TRUE", "FALSE", "IMPORT", 
		"EOS", "MODULE_SP", "CMTCH", "MCOMO", "MCOMC", "DEF", "LPRM", "RPRM", 
		"LBRC", "RBRC", "LSQB", "RSQB", "AND", "OR", "LT", "GT", "LTE", "GTE", 
		"IF", "WHILE", "EQ", "NOT", "CONST", "ELIF", "ELSE", "PARAM_SEP", "LOAD", 
		"INCLUDE", "URL", "CALL_t", "UNION_t", "INIT", "SIMP_CHARS", "COMPLEX_CHARS", 
		"LINE_COMMENT", "MULTI_COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Micro.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MicroParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Type_idContext extends ParserRuleContext {
		public TerminalNode INT_ID() { return getToken(MicroParser.INT_ID, 0); }
		public TerminalNode DOUBLE_ID() { return getToken(MicroParser.DOUBLE_ID, 0); }
		public TerminalNode FLOAT_ID() { return getToken(MicroParser.FLOAT_ID, 0); }
		public TerminalNode VOID_ID() { return getToken(MicroParser.VOID_ID, 0); }
		public TerminalNode BOOL_ID() { return getToken(MicroParser.BOOL_ID, 0); }
		public TerminalNode SHORT_ID() { return getToken(MicroParser.SHORT_ID, 0); }
		public TerminalNode LONG_ID() { return getToken(MicroParser.LONG_ID, 0); }
		public Type_idContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MicroListener ) ((MicroListener)listener).enterType_id(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MicroListener ) ((MicroListener)listener).exitType_id(this);
		}
	}

	public final Type_idContext type_id() throws RecognitionException {
		Type_idContext _localctx = new Type_idContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_type_id);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FLOAT_ID) | (1L << DOUBLE_ID) | (1L << INT_ID) | (1L << VOID_ID) | (1L << BOOL_ID) | (1L << SHORT_ID) | (1L << LONG_ID))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdContext extends ParserRuleContext {
		public TerminalNode SIMP_CHARS() { return getToken(MicroParser.SIMP_CHARS, 0); }
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MicroListener ) ((MicroListener)listener).enterId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MicroListener ) ((MicroListener)listener).exitId(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(SIMP_CHARS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MidContext extends ParserRuleContext {
		public TerminalNode COMPLEX_CHARS() { return getToken(MicroParser.COMPLEX_CHARS, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public MidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MicroListener ) ((MicroListener)listener).enterMid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MicroListener ) ((MicroListener)listener).exitMid(this);
		}
	}

	public final MidContext mid() throws RecognitionException {
		MidContext _localctx = new MidContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_mid);
		try {
			setState(142);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMPLEX_CHARS:
				enterOuterAlt(_localctx, 1);
				{
				setState(140);
				match(COMPLEX_CHARS);
				}
				break;
			case SIMP_CHARS:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				id();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Bx_typeContext extends ParserRuleContext {
		public Type_idContext type_id() {
			return getRuleContext(Type_idContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public MidContext mid() {
			return getRuleContext(MidContext.class,0);
		}
		public Bx_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bx_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MicroListener ) ((MicroListener)listener).enterBx_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MicroListener ) ((MicroListener)listener).exitBx_type(this);
		}
	}

	public final Bx_typeContext bx_type() throws RecognitionException {
		Bx_typeContext _localctx = new Bx_typeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bx_type);
		try {
			setState(147);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(144);
				type_id();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(145);
				id();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(146);
				mid();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode TRUE() { return getToken(MicroParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(MicroParser.FALSE, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public MidContext mid() {
			return getRuleContext(MidContext.class,0);
		}
		public TerminalNode FLOAT() { return getToken(MicroParser.FLOAT, 0); }
		public TerminalNode INTEGER() { return getToken(MicroParser.INTEGER, 0); }
		public TerminalNode DOUBLE() { return getToken(MicroParser.DOUBLE, 0); }
		public TerminalNode STRING() { return getToken(MicroParser.STRING, 0); }
		public Func_call_outContext func_call_out() {
			return getRuleContext(Func_call_outContext.class,0);
		}
		public Func_call_localContext func_call_local() {
			return getRuleContext(Func_call_localContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Type_castingContext type_casting() {
			return getRuleContext(Type_castingContext.class,0);
		}
		public Array_refContext array_ref() {
			return getRuleContext(Array_refContext.class,0);
		}
		public Uval_getContext uval_get() {
			return getRuleContext(Uval_getContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MicroListener ) ((MicroListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MicroListener ) ((MicroListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		try {
			setState(163);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(149);
				match(TRUE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(150);
				match(FALSE);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(151);
				id();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(152);
				mid();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(153);
				match(FLOAT);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(154);
				match(INTEGER);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(155);
				match(DOUBLE);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(156);
				match(STRING);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(157);
				func_call_out();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(158);
				func_call_local();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(159);
				expr(0);
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(160);
				type_casting();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(161);
				array_ref();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(162);
				uval_get();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddContext extends ParserRuleContext {
		public AddContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MicroListener ) ((MicroListener)listener).enterAdd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MicroListener ) ((MicroListener)listener).exitAdd(this);
		}
	}

	public final AddContext add() throws RecognitionException {
		AddContext _localctx = new AddContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_add);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubContext extends ParserRuleContext {
		public SubContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sub; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MicroListener ) ((MicroListener)listener).enterSub(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MicroListener ) ((MicroListener)listener).exitSub(this);
		}
	}

	public final SubContext sub() throws RecognitionException {
		SubContext _localctx = new SubContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sub);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MulContext extends ParserRuleContext {
		public MulContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mul; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MicroListener ) ((MicroListener)listener).enterMul(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MicroListener ) ((MicroListener)listener).exitMul(this);
		}
	}

	public final MulContext mul() throws RecognitionException {
		MulContext _localctx = new MulContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_mul);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DivContext extends ParserRuleContext {
		public DivContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_div; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MicroListener ) ((MicroListener)listener).enterDiv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MicroListener ) ((MicroListener)listener).exitDiv(this);
		}
	}

	public final DivContext div() throws RecognitionException {
		DivContext _localctx = new DivContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_div);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public TerminalNode FLOAT() { return getToken(MicroParser.FLOAT, 0); }
		public TerminalNode INTEGER() { return getToken(MicroParser.INTEGER, 0); }
		public TerminalNode DOUBLE() { return getToken(MicroParser.DOUBLE, 0); }
		public Func_call_localContext func_call_local() {
			return getRuleContext(Func_call_localContext.class,0);
		}
		public Func_call_outContext func_call_out() {
			return getRuleContext(Func_call_outContext.class,0);
		}
		public TerminalNode LPRM() { return getToken(MicroParser.LPRM, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPRM() { return getToken(MicroParser.RPRM, 0); }
		public Type_castingContext type_casting() {
			return getRuleContext(Type_castingContext.class,0);
		}
		public MidContext mid() {
			return getRuleContext(MidContext.class,0);
		}
		public Array_refContext array_ref() {
			return getRuleContext(Array_refContext.class,0);
		}
		public Uval_getContext uval_get() {
			return getRuleContext(Uval_getContext.class,0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MicroListener ) ((MicroListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MicroListener ) ((MicroListener)listener).exitValue(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_value);
		try {
			setState(186);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(173);
				match(FLOAT);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(174);
				match(INTEGER);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(175);
				match(DOUBLE);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(176);
				func_call_local();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(177);
				func_call_out();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(178);
				match(LPRM);
				setState(179);
				expr(0);
				setState(180);
				match(RPRM);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(182);
				type_casting();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(183);
				mid();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(184);
				array_ref();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(185);
				uval_get();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Negative_valueContext extends ParserRuleContext {
		public SubContext sub() {
			return getRuleContext(SubContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public Negative_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_negative_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MicroListener ) ((MicroListener)listener).enterNegative_value(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MicroListener ) ((MicroListener)listener).exitNegative_value(this);
		}
	}

	public final Negative_valueContext negative_value() throws RecognitionException {
		Negative_valueContext _localctx = new Negative_valueContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_negative_value);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(188);
			sub();
			setState(189);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
